@@ -45,6 +45,7 @@ import org.apache.solr.SolrTestCaseJ4;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.util.Utils;
 import org.apache.solr.security.VerifiedUserRoles;
+import org.apache.solr.servlet.LoadAdminUiServlet;
 import org.apache.solr.util.CryptoKeys;
 import org.jose4j.jwk.RsaJsonWebKey;
 import org.jose4j.jwk.RsaJwkGenerator;
@@ -519,6 +520,8 @@ public class JWTAuthPluginTest extends SolrTestCaseJ4 {
   public void xSolrAuthDataHeader() {
     testConfig.put("adminUiScope", "solr:admin");
     testConfig.put("authorizationEndpoint", "http://acmepaymentscorp/oauth/auz/authorize");
+    testConfig.put("tokenEndpoint", "http://acmepaymentscorp/oauth/oauth20/token");
+    testConfig.put("authorizationFlow", "code_pkce");
     testConfig.put("clientId", "solr-cluster");
     plugin.init(testConfig);
     String headerBase64 = plugin.generateAuthDataHeader();
@@ -528,6 +531,8 @@ public class JWTAuthPluginTest extends SolrTestCaseJ4 {
     assertEquals("solr:admin", parsed.get("scope"));
     assertEquals(
         "http://acmepaymentscorp/oauth/auz/authorize", parsed.get("authorizationEndpoint"));
+    assertEquals("http://acmepaymentscorp/oauth/oauth20/token", parsed.get("tokenEndpoint"));
+    assertEquals("code_pkce", parsed.get("authorization_flow"));
     assertEquals("solr-cluster", parsed.get("client_id"));
   }
 
@@ -702,5 +707,14 @@ public class JWTAuthPluginTest extends SolrTestCaseJ4 {
             .toAbsolutePath()
             .toString();
     assertEquals(2, plugin.parseCertsFromFile(pemFilePath).size());
+  }
+
+  @Test
+  public void testRegisterTokenEndpointForCsp() {
+    testConfig.put("tokenEndpoint", "http://acmepaymentscorp/oauth/oauth20/token");
+    plugin.init(testConfig);
+    assertEquals(
+        "http://acmepaymentscorp/oauth/oauth20/token",
+        System.getProperty(LoadAdminUiServlet.SYSPROP_CSP_CONNECT_SRC_URLS));
   }
 }
